Fixing overflow

--- a/src/components/create-vacants/createVacants.css
+++ b/src/components/create-vacants/createVacants.css
@@ -6,6 +6,7 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+    overflow: hidden;
 }
 
 .title-create-vacant {
@@ -29,6 +30,7 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+    overflow: hidden;
 }
 
 .form-input-create {
@@ -56,9 +58,29 @@
 .btn-form-create {
     padding: 15px;
     border: none;
-    background-color: #FF5C78;
-    color: white;
+    border: 1px solid #FF5C78;
+    color: #FF5C78;
     border-radius: 8px;
+}
+
+.status-color-red {
+    background-color: red;
+    padding: 20px;
+    border-radius: 8px;
+    color: white;
+}
+
+.status-color-green {
+    background-color: green;
+    padding: 20px;
+    border-radius: 8px;
+    color: white;
+}
+
+input, textarea {
+    border-radius: 10px;
+    border: 1px solid #FF5C78;
+    padding: 20px;
 }
 
 @media (max-width: 680px) {
